--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "gui",
-  "version": "0.1.0",
+  "name": "ifrc-vconf-gui",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postversion": "./bin/deploy"
   },
   "dependencies": {
+    "@types/marked": "^0.7.4",
+    "bulma": "^0.9.0",
     "core-js": "^3.6.5",
+    "format-ms": "^1.2.1",
+    "ky": "^0.20.0",
+    "marked": "^1.1.0",
+    "ms": "^2.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -58,5 +65,9 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
