--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "postversion": "./bin/deploy"
+    "postversion": "./bin/deploy",
+    "readme-toc": "md-toc -i"
   },
   "dependencies": {
     "@types/marked": "^0.7.4",
@@ -21,6 +22,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@robb_j/md-toc": "^0.3.1",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
