--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ky": "^0.20.0",
     "marked": "^1.1.0",
     "ms": "^2.1.2",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
