--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "format-ms": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "ky": "^0.20.0",
     "marked": "^1.1.0",
     "ms": "^2.1.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@robb_j/md-toc": "^0.3.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
