--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ms": "^2.1.2",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.18.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -35,11 +36,13 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "json-loader": "^0.5.7",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "yaml-loader": "^0.6.0"
   },
   "eslintConfig": {
     "root": true,
