--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "json-loader": "^0.5.7",
     "lint-staged": "^9.5.0",
+    "markdown-loader": "^5.1.0",
     "prettier": "^1.19.1",
+    "raw-loader": "^4.0.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11",
