--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "raw-loader": "^4.0.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11",
     "yaml-loader": "^0.6.0"
   },
@@ -62,6 +63,9 @@
     ],
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "rules": {
+      "no-debugger": "off"
     },
     "overrides": [
       {
