--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "json-loader": "^0.5.7",
     "lint-staged": "^9.5.0",
     "markdown-loader": "^5.1.0",
+    "postcss-dir-pseudo-class": "^5.0.0",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
     "sass": "^1.26.5",
