--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
     "is-email": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "ky": "^0.20.0",
-    "marked": "^1.1.0",
+    "marked": "^1.1.1",
     "ms": "^2.1.2",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.18.2",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.3.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@robb_j/md-toc": "^0.3.1",
-    "@types/jest": "^26.0.5",
+    "@types/jest": "^26.0.7",
     "@types/jsonwebtoken": "^8.5.0",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.4.6",
     "@vue/cli-plugin-unit-jest": "^4.4.6",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "json-loader": "^0.5.7",
     "lint-staged": "^9.5.0",
@@ -48,7 +48,7 @@
     "postcss-dir-pseudo-class": "^5.0.0",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
-    "sass": "^1.26.5",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11",
