--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ms": "^2.1.2",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.8.0",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.3.4",
     "vuex": "^3.4.0"
