--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^2.6.11",
     "vue-gtag": "^1.8.0",
     "vue-i18n": "^8.20.0",
+    "vue-ics": "^0.1.4",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
