--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@mdx-js/vue-loader": "^1.6.16",
     "@robb_j/md-toc": "^0.3.1",
     "@types/countdown": "0.0.7",
     "@types/jest": "^26.0.9",
