--- a/.github/workflows/pr-image.yml
+++ b/.github/workflows/pr-image.yml
@@ -6,9 +6,9 @@
 #
 
 name: Publish docker image
-on:
-  push:
-    tags: [v*]
+
+on: [pull_request]
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -22,4 +22,4 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: openlab/ifrc-vconf-gui
-          tag_with_ref: true
+          tag_with_sha: true
