--- a/.github/workflows/pr-image.yml
+++ b/.github/workflows/pr-image.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           JSON=`cat <<EOF
           {
-            "text": "built sha-${{ steps.slug.outputs.sha7 }} for $GITHUB_REPOSITORY"
+            "text": "built *sha-${{ steps.slug.outputs.sha7 }}* for $GITHUB_REPOSITORY from $GITHUB_REF"
           }`
           curl -X POST --data-urlencode "payload=$JSON" $SLACK_WEBHOOK
