--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@zoomus/websdk": "^1.7.10",
+    "audio-play": "^2.2.1",
+    "audio-resampler": "^1.0.1",
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
