add BUILD_NAME env and arg
- Show build_name in the footer if it is not empty string
- Set when building a PR

--- a/.github/workflows/pr-image.yml
+++ b/.github/workflows/pr-image.yml
@@ -27,6 +27,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: openlab/ifrc-vconf-gui
           tag_with_sha: true
+          build_args: BUILD_NAME=sha-${{ steps.slug.outputs.sha7 }}
 
       - name: slack
         env:
