--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ms": "^2.1.2",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-100vh": "^0.1.1",
     "vue-gtag": "^1.8.0",
     "vue-i18n": "^8.20.0",
     "vue-ics": "^0.1.4",
