--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-gtag": "^1.8.0",
     "vue-i18n": "^8.20.0",
     "vue-ics": "^0.1.4",
+    "vue-lottie": "^0.2.1",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
