--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "is-email": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "ky": "^0.20.0",
+    "lottie-web": "^5.7.3",
     "marked": "^1.1.1",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
@@ -34,7 +35,6 @@
     "vue-gtag": "^1.8.0",
     "vue-i18n": "^8.20.0",
     "vue-ics": "^0.1.4",
-    "vue-lottie": "^0.2.1",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
