chore: work on v2
- update to @openlab/deconf-ui-toolkit@2.0.0-beta.3
- update to @openlab/deconf-shared@3.2.0
- fixes for deconf upgrades
- use deconf getDefaultRoutes
- refactor away from deconf "lib"
- add UserData to registration
- don't re-export deconf-shared
- use mapApiState and mapMetricsState

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "@/*": ["src/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-    "typeRoots": ["./node_modules/@types", "./src/@types"]
+    "typeRoots": ["./src/@types", "./node_modules/@types"]
   },
   "include": [
     "src/**/*.yml",
