--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openlab/climatered-client",
-  "version": "1.2.0",
+  "version": "2.0.0-beta.0",
   "repository": "digitalinteraction/climatered-client",
   "private": true,
   "scripts": {
