chore: update nginx conf

--- a/hack/nginx.conf
+++ b/hack/nginx.conf
@@ -15,15 +15,19 @@ server {
 
     # https://infosec.mozilla.org/guidelines/web_security#content-security-policy
     # https://cli.vuejs.org/guide/browser-compatibility.html#modern-mode
-    # add_header Content-Security-Policy "default-src https: sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI=";
+    add_header Content-Security-Policy "default-src https:; img-src https:; script-src 'self' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; style-src 'self' 'unsafe-inline'; object-src 'none'; connect-src 'self' wss:; frame-ancestors 'none';";
 
     # https://infosec.mozilla.org/guidelines/web_security#x-content-type-options
-    # add_header X-Content-Type-Options nosniff;
+    add_header X-Content-Type-Options "nosniff";
+
+    # https://infosec.mozilla.org/guidelines/web_security#x-xss-protection
+    add_header X-XSS-Protection "1; mode=block";
 
     # https://infosec.mozilla.org/guidelines/web_security#x-frame-options
-    # TODO: fix
-    # add_header Content-Security-Policy frame-ancestors "none";
-    # add_header X-Frame-Options DENY;
+    # add_header Content-Security-Policy "frame-ancestors 'none';";
+
+    # https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Frame-Options
+    add_header X-Frame-Options "DENY";
     
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
